# orchid

./: .gitignore
orchids-challenge/: README.md
orchids-challenge/backend/: .env.example  inspect_browserbase.py  pyproject.toml  test_browserbase.py
orchids-challenge/backend/.cache/: aHR0cHM6Ly93d3cub3JjaGlkcy5hcHAv.json  aHR0cHM6Ly93d3cubmlrdW5qay5jb20v.json  aHR0cHM6Ly9oZXl5eWF5dXNoLm5ldGxpZnkuYXBwLw==.json  aHR0cHM6Ly9uZXdzLnljb21iaW5hdG9yLmNvbS8=.json
orchids-challenge/backend/app/: llm_clone.py  main.py  scraper.py
orchids-challenge/backend/cache/: aHR0cHM6Ly93d3cua290aGFyaWZlbGxvd3NoaXAuY29tLw==.json  aHR0cHM6Ly93d3cubmlrdW5qay5jb20v.json  aHR0cHM6Ly93d3cueW91dHViZS5jb20v.json  aHR0cHM6Ly9haS5nb29nbGUuZGV2L2dlbWluaS1hcGkvZG9jcy9yYXRlLWxpbWl0cw==.json  aHR0cHM6Ly9hbGdvdmVyc2VhaXJlc2VhcmNoLm9yZy8=.json  aHR0cHM6Ly9oZXl5eWF5dXNoLm5ldGxpZnkuYXBwLw==.json  aHR0cHM6Ly9uZXdzLnljb21iaW5hdG9yLmNvbS8=.json
orchids-challenge/backend/jobs/: 18e24caf-01e7-47bb-83e6-cd46ccf700f3.json  1f7757ba-2389-45b6-b26a-ac1455f4e74a.json  27b79b37-592b-4251-a157-36fe1dc9d333.json  4dd38638-3aa3-4e02-9e28-6b47ef47cc00.json  67b1ba75-e101-45ad-901c-96ebc84e9d09.json  71d8d248-ccf4-416e-8e75-d827ed787491.json  93910b37-d526-4535-8f5a-7d43e208c081.json  98f89943-0d1a-466d-a8e0-022cb75caec9.json  b1f5329e-fcba-4643-a10e-78384d0418e4.json
orchids-challenge/frontend/: package-lock.json
orchids-challenge/frontend/src/app/: page.tsx
orchids-challenge/frontend/src/app/components/: CloneForm.tsx  FeatureCard.tsx  JobStatus.tsx  ProcessStep.tsx  WebsitePreview.tsx
(+3 files in other folders)
